--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,13 +9,12 @@
         "glad.h": "c"
     },
     "C_Cpp.intelliSenseEngine": "disabled",
-        
     "clangd.path": "C:/mingw64/bin/clangd.exe",
     "clangd.arguments": ["-log=verbose", 
                          "-pretty", 
                          "--background-index",
                          //"--query-driver=/bin/arm-buildroot-linux-gnueabihf-g++", //for cross compile usage
-                         "--compile-commands-dir=C:/Code/C Vibes/compile_commands.json"
+                         "--compile-commands-dir=./compile_commands.json"
                          ]
 
 }
